# mekey-lightning

./: .gitignore  DEVELOPMENT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
python-sidecar/: .env.example  build.ps1  requirements.txt  test_streaming.py
python-sidecar/src/: transcribe_service.py
scripts/: Install-Mekey-Lightning-Runtime.ps1  package-runtime.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs  obsidian.rs  shortcuts.rs  sidecar.rs  tray.rs
src/components/: ExportDialog.tsx  SessionList.tsx  SettingsDialog.tsx  TranscriptView.tsx
src/hooks/: useTranscribeWS.ts
src/lib/: types.ts
